--- a/gb/22/10/7/n13840745.md
+++ b/gb/22/10/7/n13840745.md
@@ -21,45 +21,45 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905563.md#1">维州今年将增开12个初级保健中心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905054.md#1">美日2+2会谈联合声明 加强防御威慑中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905548.md#1">澳两家能源商调高天然气价格</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905213.md#1">廉价航空公司Bonza获准在澳洲运营</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905179.md#1">中国九名著名中医接连病亡 多为中共党员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905202.md#1">新州州长为曾穿纳粹制服参加生日派对道歉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905135.md#1">澳总理访巴新 推进两国安全合作 抗衡中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905165.md#1">澳贸易顺差继续增加 空缺职位数量减少</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905047.md#1">专家：房价创记录下跌后 人们仍买不起房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904279.md#1">中共政策不透明 外企受够了 撤离成潮流</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964052.md#1">Woolworths复活节前削减龙虾等海鲜价格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963926.md#1">中日外长会面 中方声明回避哪些问题</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963823.md#1">维州V/Line火车票降价 或引发通勤拥堵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963674.md#1">维州蔬果价格暴涨 意大利家庭自制番茄酱传统依旧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963561.md#1">百年不遇 工党从反对党手中夺走补选席位</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963304.md#1">待建公寓楼遮挡邻居阳光 墨尔本一市府拒发许可证</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963303.md#1">澳超级富豪最多城区 墨尔本图拉克排名第一</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962934.md#1">美将在瓦努阿图设大使馆 对抗中共影响力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962868.md#1">澳洲残疾保险巨额支出 包括一系列替代疗法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962865.md#1">维州新道路规则生效 分心司机面临555元罚款</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9759413.md#1" target="_blank">陆雯：1964年的一桩惨案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897476.md#1">一代娥眉惹风流 薛涛枇杷门巷后的人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900965.md#1">充满神话与力量：安东尼奥?卡诺瓦的雕塑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905725.md#1">【财商天下】1天2万医疗费 染疫病患陷债务危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13904954.md#1">【中国禁闻】专访闫丽梦：中国真实染疫死亡数令人震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905681.md#1">【舞蹈】中国古典舞技术技巧第九集：飞脚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904660.md#1">广州男开宝马撞行人5死13伤 疑喊黄坤明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900235.md#1">赵立坚被“坐冷板凳”专家揭其调职内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904696.md#1">【新闻大家谈】习近平非自愿 中共解封内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904067.md#1">与修杰楷结婚8年 贾静雯形容婚姻是修炼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904104.md#1">陈奕迅拍《盲婚哑嫁》MV 歌词充满天命感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904014.md#1">65岁中国导演何平病亡 曾出演《建党伟业》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904608.md#1">秀场歌王歌后开唱 陈美凤洪荣宏分享过往趣事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904822.md#1">徐娇确诊后康复 准备返回美国升学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894433.md#1">8种好零食 每天吃一把死亡风险降20%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903175.md#1">不止消炎助消化 每天喝芦荟汁的9个理由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901669.md#1">不起眼的青柠有6大功效 甚至能救人一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903681.md#1">调查：总是感到内心安宁 世界排名前10个国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900962.md#1">设闹钟有秘诀 这样做包你不再被响铃惊醒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/7/n13840745.htm">国际学生成贩毒工具 澳警方重点打击</a></p><hr>
