--- a/gb/22/9/18/n13827625.md
+++ b/gb/22/9/18/n13827625.md
@@ -27,37 +27,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/16/n13826725.md#1">日本2款正露丸成分不足 台全面回收12万瓶</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/16/n13826777.md#1">日本人形艺术展   屏东演武场登场</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/17/n13827101.md#1">日本发展对敌基地攻击能力 寻购攻击型无人机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925466.md#1">土耳其强震 台搜救队驰援</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923154.md#1">间谍气球非首例 美机密报告：近年已有163起</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960367.md#1">与韩国、中国竞争失利 日本OLED面板厂JOLED宣布破产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959694.md#1">中共提器官共享 台日韩各界：绝不能当共犯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918315.md#1">【百年真相】活活饿死数十万人 长春围困战内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921879.md#1">楚一丁：北美沙漠上不死的自由中国魂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921256.md#1">元宵节俗：一颗元宵汤圆承载的历史超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926153.md#1">【中国禁闻】间谍气球疑云：中共内斗失控？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926140.md#1">【有冇搞错】中共陷入负循环 很快玩完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926152.md#1">【全球新闻】一只气球好大坑？ 中共计划浮出水面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924854.md#1">组图：美军方公布中共间谍气球残骸照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924607.md#1">岳山：陈文清泄习近平心病 两会现权斗暗涌？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924304.md#1">首架国产C919被爆出故障 东航绝口不提</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924832.md#1">从中国回土国探亲 男星唐小强遭强震埋入废墟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925757.md#1">深夜弹钢琴被说扰邻 周杰伦曾用一句话回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924453.md#1">美国81岁医生力行7件事 让大脑灵光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919486.md#1">炎症生百病 5种天然消炎药帮你抗发炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923905.md#1">盐水蜂炮名列全球10大庆典 起源竟跟瘟疫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924737.md#1">梅森罐还能这样用 你一定想不到</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/18/n13827625.htm">中共欲加入CPTPP 日外交官：不应降低入会标准</a></p><hr>
