--- a/gb/23/1/25/n13915443.md
+++ b/gb/23/1/25/n13915443.md
@@ -3,14 +3,14 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>观神韵想更了解真相 钢琴家请购《转法轮》</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13915445-230125065141100815-600x400.jpg" />
-<h6>音乐医疗师兼网络大V立家真琴（Ryuke Makoto），2023年1月25日观看了神韵世界艺术团在日本东京新宿文化中心的最后一场演出。对神韵舞剧中所传达的信息引起兴趣，当场请购《转法轮》想进一步了解真相。（龚安妮／大纪元）
+<h6>音乐医疗师兼网络名人立家真琴（Ryuke Makoto），2023年1月25日观看了神韵世界艺术团在日本东京新宿文化中心的最后一场演出。对神韵舞剧中所传达的信息引起兴趣，当场请购《转法轮》想进一步了解真相。（龚安妮／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2023年01月25日讯】（大纪元记者任子慧、王文亮日本东京报导）1月25日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在日本<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E6%96%B0%E5%AE%BF%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83.md#1">东京新宿文化中心</a>（Shinjuku Bunka Center）举行了最后一场演出，连日来票房售罄，场场爆满，当地主流慕名前来观赏神韵演出，钢琴家立家真琴（Ryuke Makoto）及房地产公司前社长寺泽忠夫（Terasawa Tadao）就在其中。</p>
 <p>日本钢琴家、音乐医疗师兼网络名人立家真琴（Ryuke Makoto）观赏演出后，对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>舞剧中所传达的信息引发兴趣，随即在现场请购一本《转法轮》宝书，想进一步了解真相。</p>
 <p>立家真琴首次体验神韵风采，在大幕拉开的时刻，“我感觉气场不一样，我也会看各种舞台演出，虽然是第一次观看神韵，这和芭蕾舞是完全不同的，感觉气场就是不一样。”</p>
 <p>她说，观看神韵，“我深受触动，太棒了！还有就是，我感受到了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>。”</p>
-<p>立家真琴表示，演员们“通过艺术的手法呈现出了无法广为传递的信息，我认为这很好，然后我就在想，这背后存在的信息到底是什么呢？”她继续说道，“我有很多中国朋友，我知道因为（中国的）网络审查，所以有很多讯息无法获取。”</p>
+<p>立家真琴表示，演员“通过艺术的手法呈现出了无法广为传递的信息，我认为这很好，然后我就在想，这背后存在的信息到底是什么呢？”她继续说道，“我有很多中国朋友，我知道因为（中国的）网络审查，所以有很多讯息无法获取。”</p>
 <p>“我自己是一个艺术家，是一个音乐家，（艺术是）不需要语言的，只要看或者是听，就可以理解到意思，这是无国界的。所以我认为无论人们相信什么都可以互相理解。”</p>
 <p>她认为，“无论是人们相信什么，或者政治立场有什么不同，我能感受到这是因为大家都是在努力（生活）。”</p>
 <h2>房地产公司前社长：就像身在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a></h2>
@@ -19,8 +19,8 @@
 <p>经过朋友推荐，首次来观赏神韵，寺泽忠夫直赞，“演出比我预期的还要好。”</p>
 <p>第一个节目，让他记忆深刻，“当大幕拉开的时候，就像脱离了现实世界一般，音乐非常好听，我已经很久没有听到交响乐团的演奏了。”由于坐在前排的位子，感觉到音乐很有力量，“让我很惊讶！”</p>
 <p>神韵的现场音乐，融合东西方音乐，寺泽忠夫表示，“我认为这很好，很少有机会听到现场演奏。”他谦虚地说，“我不是专家，所以我不太懂中国的旋律，但听起来很有中国的味道。”</p>
-<p>他也很喜欢藏族舞蹈，觉得“很好，非常有魄力。”看到舞蹈演员技巧精湛，他赞赏地说，“我想他们一定经历了很多艰苦的训练，经历了很多的练习，很感动！”</p>
-<p>曾经身为社长，寺泽忠夫赞佩神韵演员们的团队合作精神可嘉，“是啊，这么多的人一起做一件事情，我认为必须有非常好的团队合作精神才能做到这一点，真的非常好。”</p>
+<p>他也很喜欢藏族舞蹈，觉得“很好，非常有魄力”。看到舞蹈演员技巧精湛，他赞赏地说，“我想他们一定经历了很多艰苦的训练，经历了很多的练习，很感动！”</p>
+<p>曾经身为社长，寺泽忠夫赞佩神韵演员的团队合作精神可嘉，“是啊，这么多的人一起做一件事情，我认为必须有非常好的团队合作精神才能做到这一点，真的非常好。”</p>
 <p>责任编辑：李沐恩</p>
 	
 <hr>
@@ -37,31 +37,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910383.md#1">【百年真相】差点改写九一三事件 林豆豆挨整始末</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914897.md#1">【新闻看点】江西再推全员核酸 舆论炸锅后取消</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914850.md#1">【中国禁闻】城市医护大幅减薪 农村严重缺药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914699.md#1">【十字路口】人生到底为何来 宿命通名人多？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914332.md#1">疫情已传遍中国大多地区 第二波恐更致命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914074.md#1">专家：官员躺平 内斗不止 中共处于崩溃边缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914062.md#1">多国电站现烂尾 中共一带一路项目在崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913498.md#1">穿30年前旗袍拜年 55岁周慧敏冻龄外表获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913535.md#1">沈腾春晚小品《坑》窜热搜 话题惊动中纪委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914214.md#1">林志颖康复露面气色佳 拍品牌形象片拜年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914317.md#1">李若彤分享冻龄秘笈：20多年没喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914701.md#1">相隔20年参加同学会 谢佳见惊见“这一幕”吓坏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913695.md#1">寒冬还没来 2023年影响美国地产的重磅消息！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913652.md#1">【美食天堂】鲜虾锅贴做法～ 皮酥脆馅料多汁美味！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913310.md#1">香草精用完了？ 这八类食材可替代</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906674.md#1">茶评15论：茶叶与茶汤的品赏心理与妙趣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/25/n13915443.htm">观神韵想更了解真相 钢琴家请购《转法轮》</a></p><hr>
